# sync2llmtxt

./: .gitignore  LICENSE  MANIFEST.in  README-ZH.md  README.md  build_and_upload.sh  directory_tree.py  pyproject.toml  requirements-test.txt  requirements.txt  sync2txt.py
src/sync2llmtxt/: __init__.py  directory_tree.py  sync2llmtxt.py
tests/: conftest.py  test_aggregate.py  test_config.py  test_directory_tree.py  test_ignore.py
