[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sync2llmtxt"
version = "0.1.0"
authors = [
  {name = "Author", email = "your.email@example.com"}
]
description = "Automatically aggregate source code files into a single text file for LLM context"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "watchdog",
    "throttle",
    "PyYAML",
    "gitignore_parser",
]

[project.scripts]
sync2llmtxt = "sync2llmtxt.sync2llmtxt:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/sync2llmtxt"
"Bug Tracker" = "https://github.com/yourusername/sync2llmtxt/issues"

[tool.setuptools]
package-dir = {"" = "src"}